Fixed issue with content jumping the pressing the toggle in Navbar.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,7 +49,7 @@
 .navItemLink {
     color: white;
     font-weight: bold;
-    display: inline !important;
+    display: inline-block !important;
 }
 
 .navItemLink:hover {
